--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "com.example.general_filter"
+        applicationId "com.general_filter"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
